# Energy-Oracle

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  energy_oracle.db  metrics.json  model.joblib  pyproject.toml  requirements.txt  test_energy_oracle.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  anomaly.py  aws_stub.py  batch.py  cache.py  config.py  data_quality.py  database.py  explainability.py  feature_store.py  features.py  health.py  logging_config.py  main.py  metrics_store.py  middleware.py  mlflow_stub.py  model.py  model_registry.py  monitoring.py  report.py  schemas.py  seasonality.py  validators.py  zone_profiles.py
pipelines/: __init__.py  retrain_dag.py
scripts/: benchmark.py  generate_diagram.py  seed_db.py
tests/: __init__.py  conftest.py  test_anomaly.py  test_api.py  test_aws_stub.py  test_batch.py  test_cache.py  test_cache_lru.py  test_config.py  test_data_quality.py  test_explainability.py  test_feature_store.py  test_features.py  test_features_n.py  test_health.py  test_logging_config.py  test_metrics_store.py  test_middleware.py  test_model.py  test_model_registry.py  test_model_seed.py  test_monitoring.py  test_report.py  test_retrain.py  test_schemas.py  test_seasonality.py  test_seasonality_ext.py  test_validators.py  test_validators_batch.py  test_zone_profiles.py
